# python-notebook-local-agent

./: README.md  package-lock.json  package.json
.github/workflows/: node.js.yml
notebook/: remove_reddit_data.ipynb  score.ipynb  test.ipynb
src/: App.tsx  Completed.tsx  Header.tsx  Landing.tsx  LogStore.tsx  Logs.tsx  Navbar.tsx  Report.tsx  Run.tsx  Scheduled.tsx  Settings.tsx  Store.tsx  Toast.tsx  index.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: completed.rs  lib.rs  main.rs  runner.rs  scheduled.rs
